# Server-Manager

./: .dockerignore  .gitignore  Dockerfile  README-Docker.md  README.md  docker-run.sh  start_server.sh  test_node_management.py  test_node_monitor.sh
client/: pubspec.yaml  removed_reconnection_logic.md  start_dev.sh  test_startup_flow.md  接下来的开发计划.md
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/res/xml/: network_security_config.xml
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/data/models/: metric.dart  node.dart
client/lib/data/services/: api_service.dart  websocket_service.dart
client/lib/presentation/pages/: error_demo_page.dart  home_page.dart  metrics_chart_page.dart  node_detail_page.dart  node_list_page.dart  settings_page.dart
client/lib/presentation/providers/: node_provider.dart  theme_provider.dart
client/lib/presentation/widgets/: README.md  error_widget.dart  progress_bar_widget.dart  setup_prompt_widget.dart  widgets.dart
client/lib/utils/: format_utils.dart
client/macos/Runner.xcodeproj/: project.pbxproj
docs/: API设计.md  Flutter客户端开发指南.md  Node代理使用指南.md  README_API.md  README_SERVER.md  RESTful_API示例.md  Server_Manager_API示例.md  Server_Manager_使用指南.md  WebSocket通信示例.md  开发计划.md  数据库设计.md  监控数据API使用指南.md
server/: Cargo.toml
server/core/: Cargo.toml
server/core/data/: server_manager.db  server_manager.db-shm  server_manager.db-wal
server/core/src/: main.rs
server/core/src/database/: connection.rs  migrations.rs
server/core/src/models/: command.rs  metric.rs  mod.rs  node.rs
server/core/src/services/: metrics.rs  mod.rs  nodes.rs  websocket.rs
server/data/: server_manager.db
server/node/: Cargo.toml
server/node/config/: default.toml
server/node/src/: config.rs  main.rs  monitor.rs  websocket.rs
