[workspace]
members = [
    "core",
    "node",
]
resolver = "2"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
# HTTP服务器框架 
axum = { version = "0.8.4", features = ["ws"] }
# WebSocket支持
tokio-tungstenite = "0.27.0"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 数据库
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
# 日期时间
chrono = { version = "0.4", features = ["serde"] }
# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 错误处理
anyhow = "1.0"
thiserror = "2.0.16"
# 系统信息采集
sysinfo = "0.37.0"
# 配置文件解析
config = "0.15.15"
