[package]
name = "core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
# 从workspace继承依赖
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Core特有的依赖
tower = "0.5"