[package]
name = "node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
# 从workspace继承依赖
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
config = { workspace = true }

# Node特有的依赖
url = "2.5"
futures-util = "0.3.31"
urlencoding = "2.1.3"
